new nav sectione created

--- a/index.html
+++ b/index.html
@@ -34,6 +34,40 @@
 
             </div>
         </div>
+
+        <!-- first -->
+
+
+        <div class="hero_section">
+
+
+            <div class="first_section">
+
+                <div class="firstone">
+
+                    <h1>Get latest travel news from all countries</h1>
+                </div>
+
+
+            </div>
+
+
+            <div class="secondnav">
+
+            </div>
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
     </div>
 
 </body>
