new contents added ang images added

--- a/index.html
+++ b/index.html
@@ -46,13 +46,57 @@
                 <div class="firstone">
 
                     <h1>Get latest travel news from all countries</h1>
+
+                    <h2>Make your dreams come true with us
+                        , explore your dream place with various proms.</h2>
+                </div>
+
+                <div class="first2">
+
+                    <div class="firsttwo">
+
+                        <img src="./images/download.png">
+                    </div>
+
+                     <div class="firstthree">
+                            <h1></h1>
+
+                        </div>
+
                 </div>
 
 
             </div>
 
 
-            <div class="secondnav">
+            <div class="second_section">
+
+                <div class="secondone">
+
+                    <div class="img1">
+                        <img src="./images/Greece.jpg.webp" alt="">
+                    </div>
+
+                    <div class="img2">
+                        <img src="./images/caption.jpg" alt="">
+                    </div>
+                </div>
+
+                <div class="secondtwo">
+
+                    <div class="img3">
+
+                        <img src="./images/images.jpeg" alt="">
+
+                    </div>
+
+
+                    <div class="img4">
+
+                        <img src="./images/magda-v-Zn_TEtx7Tqg-unsplash-324x160.jpg" alt="">
+
+                    </div>
+                </div>
 
             </div>
 
