new updates added

--- a/index.html
+++ b/index.html
@@ -59,9 +59,36 @@
                     </div>
 
                      <div class="firstthree">
-                            <h1></h1>
+                            <h1>100+ destination</h1>
+                            <p>available for you to visit with your oved ones.</p>
 
                         </div>
+
+                       
+
+                </div>
+
+                <div class="first3">
+
+                    <div class="picture1">
+                        <img class="pic1" src="./images/banner-alev-takil-x2Or94kjaqo-unsplash-1580454960799.jpg">
+
+                         
+
+                   <img class="pic3" src="./images/ac3ab39cfb5645bd5e4a90bc6d17539f.jpg">
+
+
+
+                        <img class="pic2" src="./images/photo-1558265984-f2fb435227b7.jpeg">
+                    </div>
+
+                    <!-- <div class="picture2">
+
+                   <img class="pic3" src="./images/ac3ab39cfb5645bd5e4a90bc6d17539f.jpg">
+
+                   </div> -->
+
+
 
                 </div>
 
