new sectione created and completed

--- a/index.html
+++ b/index.html
@@ -204,7 +204,54 @@
 
         <div class="third1">
 
-            
+            <img src="./images/Kerala-Cover-1.webp">
+        </div>
+
+        <div class="third2">
+
+            <div class="one">
+
+                <h1>Destination</h1>
+
+                <img src="./images/447031.png">
+                <button class="btn1">Indonesia</button>
+            </div>
+
+
+            <div class="two">
+
+                <h1>Available</h1>
+
+                <div class="twoimg">
+
+                    <img class="im1" src="./images/10755493.png">
+
+                    <button class="btn2">1Dec 2025</button>
+
+                     <img class="im2" src="./images/10755493.png">
+
+                    <button class="btn3">1Dec 2025</button>
+
+                </div>
+
+            </div>
+
+              <div class="three">
+
+                <h1>Guests</h1>
+
+                <img src="./images/14774768.png">
+                <button class="btn4">2</button>
+            </div>
+
+            <div class="for">
+
+                <img src="./images/11741045.png" alt="">
+            </div>
+
+
+
+
         </div>
 
 
