--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
                      <img class="im2" src="./images/10755493.png">
 
-                    <button class="btn3">1Dec 2025</button>
+                    <button class="btn3">30Dec 2025</button>
 
                 </div>
 
@@ -253,6 +253,29 @@
 
 
         </div>
+
+
+    </div>
+
+
+
+    <!-- fourth section -->
+
+    <div class="subnav">
+
+          <div class="subnav1">
+
+
+            <button class="para">All</button>
+            <div class="items1">Recomended</div>
+            <div class="items1">Mountain</div>
+            <div class="items1">Park</div>
+            <div class="items1">Beach</div>
+            <div class="items1">Nature</div>
+
+          </div>
+
+
 
 
     </div>
