new subnav added and add the images

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
                     <button class="btn2">1Dec 2025</button>
 
-                     <img class="im2" src="./images/10755493.png">
+                    <img class="im2" src="./images/10755493.png">
 
                     <button class="btn3">30Dec 2025</button>
 
@@ -236,7 +236,7 @@
 
             </div>
 
-              <div class="three">
+            <div class="three">
 
                 <h1>Guests</h1>
 
@@ -263,7 +263,7 @@
 
     <div class="subnav">
 
-          <div class="subnav1">
+        <div class="subnav1">
 
 
             <button class="para">All</button>
@@ -273,7 +273,106 @@
             <div class="items1">Beach</div>
             <div class="items1">Nature</div>
 
-          </div>
+        </div>
+
+        <div class="subnav2">
+
+            <div class="content1">
+
+                <img src="./images/images (6).jpeg">
+
+                <div class="create1">
+                    <h1>Lake</h1>
+
+
+                    <img class="star" src="./images/Star_icon_stylized.svg.png">
+                    <h2> 4.9</h2>
+                    <img class="loc" src="./images/free-location-icon-2952-thumb.png">
+
+                    <h3>swiss</h3>
+
+                </div>
+            </div>
+
+
+            <div class="content1">
+
+                <img src="./images/images (1).jpeg">
+
+                <div class="create1">
+                    <h1>Lake</h1>
+
+
+                    <img class="star" src="./images/Star_icon_stylized.svg.png">
+                    <h2> 4.9</h2>
+                    <img class="loc" src="./images/free-location-icon-2952-thumb.png">
+
+                    <h3>swiss</h3>
+
+                </div>
+            </div>
+
+             <div class="content1">
+
+                <img src="./images/images (2).jpeg">
+
+                <div class="create1">
+                    <h1>Lake</h1>
+
+
+                    <img class="star" src="./images/Star_icon_stylized.svg.png">
+                    <h2> 4.9</h2>
+                    <img class="loc" src="./images/free-location-icon-2952-thumb.png">
+
+                    <h3>swiss</h3>
+
+                </div>
+            </div>
+
+             <div class="content1">
+
+                <img src="./images/photo-1558265984-f2fb435227b7.jpeg">
+
+                <div class="create1">
+                    <h1>Lake</h1>
+
+
+                    <img class="star" src="./images/Star_icon_stylized.svg.png">
+                    <h2> 4.9</h2>
+                    <img class="loc" src="./images/free-location-icon-2952-thumb.png">
+
+                    <h3>swiss</h3>
+
+                </div>
+            </div>
+
+             <div class="content1">
+
+                <img src="./images//5815b4c2c1f3268824cf56bc104ae113.jpg">
+
+                <div class="create1">
+                    <h1>Lake</h1>
+
+
+                    <img class="star" src="./images/Star_icon_stylized.svg.png">
+                    <h2> 4.9</h2>
+                    <img class="loc" src="./images/free-location-icon-2952-thumb.png">
+
+                    <h3>swiss</h3>
+
+                </div>
+            </div>
+
+            
+
+
+
+
+
+
+
+
+        </div>
 
 
 
