new contents added

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 </div>
             </div>
 
-             <div class="content1">
+            <div class="content1">
 
                 <img src="./images/images (2).jpeg">
 
@@ -329,7 +329,7 @@
                 </div>
             </div>
 
-             <div class="content1">
+            <div class="content1">
 
                 <img src="./images/photo-1558265984-f2fb435227b7.jpeg">
 
@@ -346,7 +346,7 @@
                 </div>
             </div>
 
-             <div class="content1">
+            <div class="content1">
 
                 <img src="./images//5815b4c2c1f3268824cf56bc104ae113.jpg">
 
@@ -363,19 +363,105 @@
                 </div>
             </div>
 
-            
-
-
-
-
-
-
-
 
         </div>
 
 
+        <div class="subnav3">
 
+            <div class="content1">
+
+                <img src="./images/images (3).jpeg">
+
+                <div class="create1">
+                    <h1>Lake</h1>
+
+
+                    <img class="star" src="./images/Star_icon_stylized.svg.png">
+                    <h2> 4.9</h2>
+                    <img class="loc" src="./images/free-location-icon-2952-thumb.png">
+
+                    <h3>swiss</h3>
+
+                </div>
+            </div>
+
+            <div class="content1">
+
+                <img src="./images/images (4).jpeg">
+
+                <div class="create1">
+                    <h1>Lake</h1>
+
+
+                    <img class="star" src="./images/Star_icon_stylized.svg.png">
+                    <h2> 4.9</h2>
+                    <img class="loc" src="./images/free-location-icon-2952-thumb.png">
+
+                    <h3>swiss</h3>
+
+                </div>
+            </div>
+
+            <div class="content1">
+
+                <img src="./images/images (5).jpeg">
+
+                <div class="create1">
+                    <h1>Lake</h1>
+
+
+                    <img class="star" src="./images/Star_icon_stylized.svg.png">
+                    <h2> 4.9</h2>
+                    <img class="loc" src="./images/free-location-icon-2952-thumb.png">
+
+                    <h3>swiss</h3>
+
+                </div>
+            </div>
+
+            <div class="content1">
+
+                <img src="./images/premium_photo-1675713797384-663933b28da9.jpeg">
+
+                <div class="create1">
+                    <h1>Lake</h1>
+
+
+                    <img class="star" src="./images/Star_icon_stylized.svg.png">
+                    <h2> 4.9</h2>
+                    <img class="loc" src="./images/free-location-icon-2952-thumb.png">
+
+                    <h3>swiss</h3>
+
+                </div>
+            </div>
+
+            <div class="content1">
+
+                <img src="./images/oar2.jpg">
+
+                <div class="create1">
+                    <h1>Lake</h1>
+
+
+                    <img class="star" src="./images/Star_icon_stylized.svg.png">
+                    <h2> 4.9</h2>
+                    <img class="loc" src="./images/free-location-icon-2952-thumb.png">
+
+                    <h3>swiss</h3>
+
+                </div>
+            </div>
+
+        </div>
+
+    <div class="subnav4">
+
+
+        <button class="view">View More</button>
+
+        </div>
 
     </div>
 
