new contents added

--- a/index.html
+++ b/index.html
@@ -456,14 +456,80 @@
 
         </div>
 
-    <div class="subnav4">
+        <div class="subnav4">
 
 
-        <button class="view">View More</button>
+            <button class="view">View More</button>
 
         </div>
 
     </div>
+
+
+
+    <!-- fifth section -->
+
+
+    <div class="fifth_section">
+
+        <div class="fifth1">
+            <div class="seq1">
+
+                <h1>What Our Customer Say</h1>
+                <p>Hear from real travelers who've experienced unforgettable journeys with us.</p>
+
+            </div>
+
+
+            <div class="seq2">
+
+                <div class="set1">
+
+                    <p>Booking through this site was the best decision I made! Everything was smooth, from the itinerary
+                        to
+                        the little details. I didn't have to worry about a thing.</p>
+
+                </div>
+
+                <div class="set2">
+
+                    <img class="cartoon" src="./images/fb8e5c9e141d406a1564660535a1fdcd.jpg">
+                    <h1>Samantha R., USA</h1>
+
+                    <div class="rating">
+
+                        <img src="./images/7656139.png">
+                        <img src="./images/7656139.png">
+                        <img src="./images/7656139.png">
+                        <img src="./images/7656139.png">
+                        <img src="./images/17107428.png">
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="fifth2">
+
+
+            <div class="card1">
+
+                <img src="./images/images (7).jpeg">
+
+            </div>
+
+            <div class="card2">
+
+                <img src="./images/f88f46-d4d7-bca-6efb-7feb2e75f3a_seomagic-image_45.jpeg">
+            </div>
+
+        </div>
+
+    </div>
+
+
 
 </body>
 
