new contents added and images added

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                         <img src="./images/7656139.png">
                         <img src="./images/17107428.png">
                     </div>
-                    
+
                 </div>
             </div>
         </div>
@@ -530,6 +530,51 @@
     </div>
 
 
+
+    <!-- sixth -->
+
+    <div class="sixth">
+
+        <div class="sixth1">
+
+            <div class="sixthone">
+
+                <img src="./images//1973982.png">
+                <p>Make your dreams come true with us, explore your dream place with various promos.</p>
+            </div>
+
+            <div class="sixthtwo">
+
+                <h1>Get in Touch</h1>
+                <img class="phone" src="./images/126509.png">
+                <h3>+123 456 789</h3>
+                <img class="mail" src="./images/542638.png">
+                <p>Mex@gmail.com</p>
+
+
+            </div>
+
+
+        </div>
+
+
+
+        <div class="sixth2">
+
+            <img src="./images/482540-nature-snow-water-boat-trees-mountains-300x200.jpg">
+        </div>
+
+
+        <div class="sixth3">
+
+            <div class="foot">Destination</div>
+            <div class="foot">About Us</div>
+            <div class="foot"></div>
+
+        </div>
+
+
+    </div>
 
 </body>
 
