footer section craeted and added the few sections

--- a/index.html
+++ b/index.html
@@ -567,9 +567,17 @@
 
         <div class="sixth3">
 
-            <div class="foot">Destination</div>
-            <div class="foot">About Us</div>
-            <div class="foot"></div>
+            <div class="sixth4">
+
+                <div class="foot">Destination</div>
+                <div class="foot">About Us</div>
+                <div class="foot">Testinomial</div>
+
+            </div>
+
+            
+
+
 
         </div>
 
