footer section completed

--- a/index.html
+++ b/index.html
@@ -575,7 +575,17 @@
 
             </div>
 
-            
+            <div class="sixth5">
+
+                <p>@copyright yugen_ars 2025</p>
+
+                <div class="sixth6">
+                <img src="./images/20673.png">
+                 <img src="./images/2168336.png">
+                 <img src="./images/1384015.png">
+
+                 </div>
+            </div>
 
 
 
